@@ -86,7 +86,7 @@ class Explosion_effect : public Sprites_effect
 	Game_object *explode;		// What's exploding, or 0.
 public:
 	Explosion_effect(Tile_coord p, Game_object *exp);
-	virtual ~Explosion_effect();
+	virtual void handle_event(unsigned long time, long udata);
 	};
 
 /*
