@@ -1,3 +1,8 @@
+2001-10-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* effects.*: changed explosion effect to do damage in the middle of
+	the explosion instead of afterwards
+	* objs.cc: powderkegs blow up more doors
+
 2001-10-11  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* monsters.cc: Slime movement is starting to work.
